--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "list-port": "lsof -i tcp:5000",
+    "kill-by-port": "kill -9 <PORT>"
   },
   "repository": {
     "type": "git",
